--- a/SimpleSpringSecurity/.settings/org.eclipse.wst.common.component
+++ b/SimpleSpringSecurity/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resource"/>
         <property name="context-root" value="SimpleSpringSecurity"/>
         <property name="java-output-path" value="/SimpleSpringSecurity/target/classes"/>
     </wb-module>
