Section 2 - Video 2.4 - login page

--- a/SimpleSpringSecurity/.settings/org.eclipse.wst.common.component
+++ b/SimpleSpringSecurity/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="context-root" value="SimpleSpringSecurity"/>
         <property name="java-output-path" value="/SimpleSpringSecurity/target/classes"/>
     </wb-module>
